# ahnlich

./: .gitignore  1661c4d877249542.wasm  1984.txt  38247597384911dc.wasm  404.html  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  TODO.md  animal_farm.epub  dec8962a31be1199.mjs  dec8962a31be1199.mjs.LICENSE.txt  docker-compose.yml  down-and-out.txt  homage-to-catalonia.txt  index.html  index.txt  llms-full.txt  llms.txt  package-lock.json  package.json  search-index.json  sitemap.xml  zvec.html
ahnlich/: .dockerignore  Cargo.toml  Dockerfile  Makefile  docker-compose.yml  main.txt  replication-rfc.md  rust-toolchain.toml  wait-for-it.sh
ahnlich-python-client/: pyproject.toml
ahnlich/.cargo/: config.toml
ahnlich/.config/: nextest.toml
ahnlich/ahnlich_ai/: Cargo.toml
ahnlich/ahnlich_ai/src/: error.rs
ahnlich/ahnlich_ai/src/cli/: server.rs
ahnlich/ahnlich_ai/src/server/: handler.rs  task.rs
ahnlich/ai/: Cargo.toml
ahnlich/ai/benches/: memory_profile.rs  realistic_memory_profile.rs  speed_comparison.rs
ahnlich/ai/src/: error.rs  lib.rs  main.rs
ahnlich/ai/src/cli/: mod.rs  server.rs
ahnlich/ai/src/engine/: mod.rs  operations.rs  pool.rs  store.rs  versioned.rs
ahnlich/ai/src/manager/: mod.rs
ahnlich/ai/src/replication/: mod.rs
ahnlich/ai/src/server/: handler.rs  mod.rs  task.rs
ahnlich/ai/src/tests/: aiproxy_test.rs  buffalo_l_test.rs  clap_test.rs  grpc_aiproxy_test.rs  jina_code_test.rs  migration_test.rs  mod.rs  sface_yunet_test.rs
ahnlich/cli/: Cargo.toml  README.md
ahnlich/cli/src/: cluster.rs  connect.rs  history.rs  lib.rs  main.rs  term.rs
ahnlich/cli/src/config/: cli.rs
ahnlich/cli/tests/: integration_with_servers.rs  non_interactive_tests.rs
ahnlich/client/: Cargo.toml  README.md
ahnlich/client/src/: ai.rs  conn.rs  db.rs  error.rs  lib.rs  prelude.rs
ahnlich/client/src/builders/: ai.rs  db.rs
ahnlich/client/src/conn/: ai.rs  db.rs  mod.rs
ahnlich/client/src/grpc/: ai.rs  db.rs
ahnlich/db/: Cargo.toml
ahnlich/db/benches/: database.rs  linear_analysis.rs  memory_profile.rs  persistence.rs
ahnlich/db/src/: errors.rs  fixtures.rs  lib.rs  main.rs
ahnlich/db/src/algorithm/: heap.rs  mod.rs  non_linear.rs  similarity.rs
ahnlich/db/src/cli/: mod.rs  server.rs
ahnlich/db/src/client/: mod.rs
ahnlich/db/src/engine/: mod.rs  operations.rs  predicate.rs  store.rs  versioned.rs
ahnlich/db/src/persistence/: mod.rs
ahnlich/db/src/replication/: mod.rs
ahnlich/db/src/server/: cluster.rs  cluster_forwarding.rs  cluster_mutations.rs  cluster_queries.rs  cluster_tasks.rs  handler.rs  mod.rs  store_runtime.rs  task.rs
ahnlich/db/src/tests/: auth_tests.rs  cluster_tests.rs  grpc_server_test.rs  migration_test.rs  mod.rs  replication_store_tests.rs  server_test.rs  server_tests.rs  upsert.rs
ahnlich/db/tests/: server_test.rs
ahnlich/dsl/: Cargo.toml
ahnlich/dsl/src/: ai.rs  algorithm.rs  array.rs  db.rs  error.rs  lib.rs  metadata.rs  parser.rs  predicate.rs  shared.rs
ahnlich/dsl/src/syntax/: db.pest  syntax.pest
ahnlich/dsl/src/tests/: ai.rs  db.rs  mod.rs
ahnlich/grpc_types/: Cargo.toml  build.rs
ahnlich/grpc_types/src/: client.rs  keyval.rs  lib.rs  metadata.rs  version.rs
ahnlich/grpc_types/src/ai/: execution_provider.rs  mod.rs  models.rs  pipeline.rs  preprocess.rs  query.rs  server.rs
ahnlich/grpc_types/src/algorithm/: mod.rs  nonlinear.rs
ahnlich/grpc_types/src/db/: mod.rs  pipeline.rs  (+2 more)
ahnlich/replication/: Cargo.toml  build.rs
ahnlich/replication/benches/: raft_rpc_codec.rs
ahnlich/replication/proto/: cluster_admin.proto
ahnlich/replication/src/: admin.rs  cluster_info.rs  config.rs  lib.rs  network.rs  node.rs  test_utils.rs  types.rs
ahnlich/replication/tests/: smoke.rs
ahnlich/server/: Cargo.toml
ahnlich/server/src/: errors.rs  lib.rs  main.rs
ahnlich/server/tests/: server_test.rs
ahnlich/similarity/: Cargo.toml  README.md
ahnlich/similarity/benches/: hnsw_bench.rs
ahnlich/similarity/src/: distance.rs  embedding_key.rs  error.rs  heap.rs  hnsw.rs  kdtree.rs  lib.rs  utils.rs
ahnlich/task-manager/: Cargo.toml
ahnlich/task-manager/src/: lib.rs
ahnlich/tracer/: Cargo.toml
ahnlich/tracer/src/: lib.rs
ahnlich/typegen/: Cargo.toml
ahnlich/typegen/src/: main.rs
ahnlich/types/: Cargo.toml  README.md  build.rs
ahnlich/types/src/: bincode.rs  client.rs  errors.rs  keyval.rs  lib.rs  metadata.rs  predicate.rs  predicates.rs  query.rs  schema.rs  server.rs  server_types.rs  similarity.rs  version.rs
ahnlich/utils/: Cargo.toml
ahnlich/utils/src/: allocator.rs  auth.rs  cli.rs  client.rs  connection_layer.rs  fallible.rs  lib.rs  parallel.rs  persistence.rs  protocol.rs  server.rs  size_calculation.rs  snapshot.rs
ahnlich/wasm-db/: .gitignore  Cargo.toml  DOCUSAURUS.md  README.md  build.sh  fix-worker-imports.sh  package.json
ahnlich/wasm-db/.cargo/: config.toml
ahnlich/wasm-db/examples/: README.md  test.mjs
ahnlich/wasm-db/src/: lib.rs
examples/python/book-search/: .gitignore  .python-version  README.md  insert_book.py  main.py  pyproject.toml  search_actions.py
examples/rust/image-search/: Cargo.toml  README.md
extensions/rust/ahnlich-postgres-ext/: .gitignore  Cargo.toml  README.md  ahnlich_postgres_ext.control
sdk/ahnlich-client-py/: .bumpversion.cfg  .gitignore  MSG_TAG  Makefile  README.md  VERSION  build_fixed.py  bumpversion.py  client.py  config.py  demo_embed.py  demo_tracing.py  poetry-versioning.py  protocol.py  pyproject.toml
sdk/ahnlich-client-py/ahnlich_client_py/: __init__.py  client.py  config.py  demo_tracing.py  exceptions.py  libs.py  protocol.py
sdk/ahnlich-client-py/bincode/: __init__.py
sdk/ahnlich-client-py/internals/: protocol.py  query.py  request_builder.py  server_response.py
sdk/ahnlich-client-py/serde_binary/: __init__.py
sdk/ahnlich-client-py/tests/: conftest.py  test_client_store_commands.py  test_client_unit_commands.py
sdk/py/: connect.py  protocol.py  pyproject.toml  query.py  server_response.py
sdk/py/bincode/: __init__.py
sdk/py/serde_binary/: __init__.py
(+3272 files in other folders)
