[tool.poetry]
name = "ahnlich-python-client"
version = "0.1.0"
description = "A python client for interacting with Ahnlich DB"
authors = ["David Onuh <davidonuh1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
