[workspace]
members = [
  "db",
  "types",
  "client",
  "tracer", 
  "typegen",
  "utils",
  "ahnlich_ai",
]
resolver = "2"

[workspace.dependencies]
async-trait = "0.1"
serde = { version = "1.0.*", features = ["derive", "rc"] }
bincode = "1.3.3"
ndarray = { version = "0.15.6", features = ["serde"] }
serde_json = "1.0.116"
itertools = "0.10.0"
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3.30"
once_cell = "1.19.0"
pretty_assertions = "1.4.0"
tracing = "0.1"
thiserror = "1.0"
blake3 = "1.5.1"
flurry = { version = "0.5.1", features = ["serde"] }
tokio = { version = "1.37.0", features = [
  "net",
  "macros",
  "io-util",
  "rt-multi-thread",
  "sync",
  "signal"
]}
tokio-graceful = "0.1.6"

