[workspace]
members = [
  "ai",
  "db",
  "dsl",
  "cli",
  "client",
  "similarity",
  "task-manager",
  "tracer", 
  "utils",
  "types",
]
resolver = "2"

[workspace.dependencies]
async-trait = "0.1"
serde = { version = "1.0.*", features = ["derive", "rc"] }
bincode = "1.3.3"
ndarray = { version = "0.16.1", features = ["serde", "rayon"] }
image = "0.25.5"
serde_json = "1.0.116"
itertools = "0.10.0"
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3.30"
once_cell = "1.19.0"
pretty_assertions = "1.4.0"
tracing = "0.1"
thiserror = "1.0"
ahash = "0.8"
tokio = { version = "1.37.0", features = [
  "net",
  "macros",
  "io-util",
  "rt-multi-thread",
  "sync",
  "signal"
]}
tokio-util = { version = "0.7.11", features = ["rt"] }
rand = "0.8"
rayon = "1.10"
opentelemetry =  { version = "0.23.0", features = ["trace"] }
tracing-opentelemetry = "0.24.0"
log = "0.4"
fallible_collections = "0.4.9"
dirs = "5.0.1"
strum = { version = "0.26", features = ["derive"] }
papaya = { version = "0.2.0", features = ["serde"] }
tonic = "0.12.3"
http = "1.2.0"
prost = "0.13"

[profile.release]
lto = true
