[package]
name = "ai"
version = "0.1.0"
edition = "2021"

# only used for rust client test and not to be released
[lib]
name = "ahnlich_ai_proxy"
path = "src/lib.rs"


[[bin]]
name = "ahnlich-ai"
path = "src/main.rs"

[dependencies]
flurry.workspace = true
tokio.workspace = true
serde.workspace = true
ndarray.workspace = true
image.workspace = true
clap.workspace = true
thiserror.workspace = true
async-trait.workspace = true
utils = { path = "../utils", version = "*" }
task-manager = { path = "../task-manager", version = "*" }
ahnlich_types = { path = "../types", version = "*" }
tokio-util.workspace = true
once_cell.workspace = true
tracing.workspace = true
tracer = { path = "../tracer", version = "*" }
ahnlich_client_rs = { path = "../client", version = "*" }
deadpool.workspace = true
nonzero_ext = "0.3.0"
serde_json.workspace = true
termcolor = "1.4.1"
strum = { version = "0.26", features = ["derive"] }
log.workspace = true
fallible_collections.workspace = true
rayon.workspace = true
fastembed = { version = "4.0.0", features = ["default"] }
hf-hub = { version = "0.3", default-features = false }
dirs = "5.0.1"
ort = { version = "=2.0.0-rc.5", default-features = false }
moka = { version = "0.12.8", features = ["future"] }
tracing-opentelemetry.workspace = true
futures.workspace = true
tiktoken-rs = "0.5.9"
itertools.workspace = true
tokenizers = { version = "0.20.1", features = ["hf-hub"] }
[dev-dependencies]
db = { path = "../db", version = "*" }
pretty_assertions.workspace = true
