[package]
name = "ai"
version = "0.1.0"
edition = "2024"

# only used for rust client test and not to be released
[lib]
name = "ahnlich_ai_proxy"
path = "src/lib.rs"


[[bin]]
name = "ahnlich-ai"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
tonic.workspace = true
tonic-reflection.workspace = true
prost.workspace = true
serde.workspace = true
ndarray.workspace = true
image.workspace = true
clap.workspace = true
thiserror.workspace = true
async-trait.workspace = true
utils = { path = "../utils", version = "*" }
task-manager = { path = "../task-manager", version = "*" }
ahnlich_types = { path = "../types", version = "*" }
tokio-util.workspace = true
once_cell.workspace = true
tracing.workspace = true
tracer = { path = "../tracer", version = "*" }
ahnlich_client_rs = { path = "../client", version = "*" }
nonzero_ext = "0.3.0"
serde_json.workspace = true
termcolor = "1.4.1"
strum.workspace = true
log.workspace = true
fallible_collections.workspace = true
rayon.workspace = true
hf-hub = { version = "0.4", default-features = false, features = [
  "ureq",
  "rustls-tls",
] }
dirs = "5.0.1"
ort = { version = "=2.0.0-rc.5", features = ["ndarray"] }
fast_image_resize = { version = "5.1.1", features = ["rayon"] }
ort-sys = "=2.0.0-rc.8"
moka = { version = "0.12.8", features = ["future", "sync"] }
tracing-opentelemetry.workspace = true
futures.workspace = true
tiktoken-rs = "0.5.9"
itertools.workspace = true
tokenizers = { version = "0.21" }
papaya.workspace = true

[features]
# ORT Execution providers
default = ["tensorrt", "cuda"]
tensorrt = ["ort/tensorrt"]
cuda = ["ort/cuda"]
# activate only on apple devices
coreml = ["ort/coreml"]
# activate only on windows devices
directml = ["ort/directml"]

[dev-dependencies]
db = { path = "../db", version = "*" }
pretty_assertions.workspace = true
regex = "1.11.1"
test-case = "3.3.1"
dhat = "0.3"
criterion = "0.4"

[[bench]]
name = "memory_profile"
harness = false

[[bench]]
name = "realistic_memory_profile"
harness = false

[[bench]]
name = "speed_comparison"
harness = false
