[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
name = "ahnlich_client_rs"
crate_type = ["cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types", version = "*" }
thiserror.workspace = true
tokio.workspace = true
bincode.workspace = true
r2d2 = "0.8.10"
