[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
name = "ahnlich_client_rs"
crate_type = ["cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types", version = "*" }
thiserror.workspace = true
once_cell.workspace = true
bincode.workspace = true
async-trait.workspace = true
tokio.workspace = true
deadpool = { version = "0.10", features = ["rt_tokio_1"]}

[dev-dependencies]
db = { path = "../db", version = "*" }
pretty_assertions.workspace = true
