[package]
name = "ahnlich_client_rs"
version = "0.1.0"
authors = ["Diretnan Domnan <diretnandomnan@gmail.com>"]
categories = ["database-implementations", "database", "web-programming"]
keywords = ["ahnlich", "in-memory", "ai"]
edition = "2021"
license-file = "LICENSE"
homepage = "https://github.com/deven96/ahnlich"
repository = "https://github.com/deven96/ahnlich"
description = "Client library for accessing in-memory ahnlich vector database and ai-proxy"

[badges]
maintenance = { status = "actively-developed" }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahnlich_types = { path = "../types", version = "*" }
thiserror.workspace = true
once_cell.workspace = true
bincode.workspace = true
async-trait.workspace = true
tokio.workspace = true
deadpool.workspace = true
fallible_collections.workspace = true
typed-builder = "0.20.0"

[dev-dependencies]
db = { path = "../db", version = "*" }
ai = { path = "../ai", version = "*" }
pretty_assertions.workspace = true
ndarray.workspace = true
utils = { path = "../utils", version = "*" }

