[package]
name = "db"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "ahnlich-db"
path = "src/main.rs"

# WARN!!! - used for rust client test, benchmarking and not to be released
[lib]
name = "ahnlich_db"
path = "src/lib.rs"
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flurry.workspace = true
serde.workspace = true
blake3.workspace = true
ndarray.workspace = true
bincode.workspace = true
itertools.workspace = true
clap.workspace = true
thiserror.workspace = true
utils = { path = "../utils", version = "*" }
ahnlich_types = { path = "../types", version = "*" }
task-manager = { path = "../task-manager", version = "*" }
ahnlich_similarity = { path = "../similarity", version = "*", features = ["serde"] }
tokio.workspace = true
tokio-util.workspace = true
once_cell.workspace = true
tracing.workspace = true
tracer = { path = "../tracer", version = "*" }
serde_json.workspace = true
async-trait.workspace = true
rayon.workspace = true
log.workspace = true
fallible_collections.workspace = true


[dev-dependencies]
futures.workspace = true
once_cell.workspace = true
pretty_assertions.workspace = true
criterion = "0.4"
rand.workspace = true

[[bench]]
name = "database"
harness = false
