[package]
name = "db"
version = "0.1.0"
edition = "2024"

[features]
dhat-heap = ["utils/dhat-heap"]

[[bin]]
name = "ahnlich-db"
path = "src/main.rs"

# WARN!!! - used for rust client test, benchmarking and not to be released
[lib]
name = "ahnlich_db"
path = "src/lib.rs"
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
ahash.workspace = true
ndarray.workspace = true
bincode.workspace = true
itertools.workspace = true
clap.workspace = true
thiserror.workspace = true
utils = { path = "../utils", version = "*" }
task-manager = { path = "../task-manager", version = "*" }
ahnlich_similarity = { path = "../similarity", version = "*", features = ["serde"] }
tokio.workspace = true
tokio-util.workspace = true
once_cell.workspace = true
tracing.workspace = true
tracer = { path = "../tracer", version = "*" }
serde_json.workspace = true
async-trait.workspace = true
rayon.workspace = true
log.workspace = true
fallible_collections.workspace = true
pulp.workspace = true
papaya.workspace = true
ahnlich_types = { path = "../types", version = "*"  }
tonic.workspace = true

[dev-dependencies]
futures.workspace = true
once_cell.workspace = true
pretty_assertions.workspace = true
criterion = "0.4"
rand.workspace = true
fastrand = "1.9"
dhat = "0.3"
rcgen = "0.13"
tempfile = "3"
ahnlich_client_rs = { path = "../client", version = "*" }

[[bench]]
name = "database"
harness = false

[[bench]]
name = "memory_profile"
harness = false
