[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "anlich-server"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flurry = "0.5.1"
sha2 = "0.10.3"
ndarray.workspace = true
bincode.workspace = true
itertools.workspace = true
clap.workspace = true
thiserror = "1.0"
types = { path = "../types", version = "*" }
tokio = { version = "1.37.0", features = [
  "net",
  "macros",
  "io-util",
  "rt-multi-thread",
  "sync",
  "signal"
]}
tokio-graceful = "0.1.6"
cap = "0.1.2"
once_cell.workspace = true
tracing.workspace = true
tracer = { path = "../tracer", version = "*" }


[dev-dependencies]
loom = "0.7.2"
reqwest = "0.12.4"
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["io-util", "sync"] }
futures.workspace = true
once_cell.workspace = true
pretty_assertions.workspace = true
