[package]
name = "ahnlich_types"
version = "0.1.0"
authors = ["Diretnan Domnan <diretnandomnan@gmail.com>"]
categories = ["database-implementations", "database", "web-programming"]
keywords = ["ahnlich", "in-memory", "ai"]
edition = "2024"
license-file = "LICENSE"
homepage = "https://github.com/deven96/ahnlich/ahnlich/types"
repository = "https://github.com/deven96/ahnlich/ahnlich/types"
description = "Types for using ahnlich_client_rs AI proxy and in-memory vector DB"

[dependencies]
tonic.workspace = true
prost.workspace = true
prost-types = "0.13"
serde.workspace = true
ascii85 = "0.2.1"
pgrx = { version = "=0.16.0", features = ["pg15"] }


[build-dependencies]
prost-build = "0.13.4"
tonic-build = "0.12.3"
walkdir = "2.5.0"
