[package]
name = "utils"
version = "0.0.0"
edition = "2021"

[dependencies]
ahnlich_types = { path = "../types", version = "*" }
task-manager = { path = "../task-manager", version = "*" }
tracing.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
tracer = { path = "../tracer", version = "*" }
tokio.workspace = true
thiserror.workspace = true
serde.workspace = true
async-trait.workspace = true
tempfile = "3.5"
serde_json.workspace = true
log.workspace = true
cap = "0.1.2"
tokio-util.workspace = true
fallible_collections.workspace = true
rayon.workspace = true
clap.workspace = true
futures.workspace = true
papaya.workspace = true
tower = "0.5.2"
pin-project = "1"
tower-layer = "0.3.3"
tonic.workspace = true
http.workspace = true
hyper = { version = "1", features = ["full"] }
grpc_types = { path = "../grpc_types", version = "*" }
