[package]
name = "utils"
version = "0.0.0"
edition = "2024"

[features]
default = ["server"]
server = [
    "dep:ahnlich_types",
    "dep:tokio",
    "dep:tokio-util",
    "dep:tonic",
    "dep:tracer",
    "dep:tracing-opentelemetry",
    "dep:opentelemetry",
    "dep:task-manager",
    "dep:async-trait",
    "dep:tempfile",
    "dep:cap",
    "dep:tikv-jemallocator",
    "dep:tikv-jemalloc-ctl",
    "dep:tower",
    "dep:pin-project",
    "dep:tower-layer",
    "dep:http",
    "dep:hyper",
    "dep:sha2",
    "dep:toml",
    "dep:memmap2",
    "dep:futures",
    "dep:rayon",
]

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
fallible_collections.workspace = true
clap.workspace = true
papaya.workspace = true
tracing.workspace = true

# Server-only dependencies
task-manager = { path = "../task-manager", version = "*", optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
tracer = { path = "../tracer", version = "*", optional = true }
tokio = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
tempfile = { version = "3.5", optional = true }
cap = { version = "0.1.2", optional = true }
tikv-jemallocator = { workspace = true, optional = true }
tikv-jemalloc-ctl = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
tower = { version = "0.5.2", optional = true }
pin-project = { version = "1", optional = true }
tower-layer = { version = "0.3.3", optional = true }
tonic = { workspace = true, features = ["tls"], optional = true }
http = { workspace = true, optional = true }
hyper = { version = "1", features = ["full"], optional = true }
sha2 = { version = "0.10", optional = true }
toml = { version = "0.8", optional = true }
memmap2 = { version = "0.9.10", optional = true }
rayon = { workspace = true, optional = true }
ahnlich_types = { path = "../types", version = "*", optional = true }
