[package]
name = "ahnlich-wasm-db"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ahnlich-db = { package = "db", path = "../db", default-features = false, features = ["wasm", "wasm-threads"] }
ahnlich-types = { package = "ahnlich_types", path = "../types", default-features = false }
wasm-bindgen = "0.2"
prost = "0.13"
rmp-serde = "1.3"
console_error_panic_hook = "0.1"
wasm-bindgen-rayon = "1.2"
rayon = "1.12"

[profile.release]
opt-level = "z"
lto = true
strip = true
