[tool.poetry]
name = "ahnlich-client-py"
version = "0.1.0"
description = "A python client for interacting with Ahnlich DB and AI"
authors = ["David Onuh <davidonuh1@gmail.com>"]
readme = "README.md"

packages = [
    { include = "ahnlich_client_py" },
    { include = "VERSION" },
]

exclude = [
    "ahnlich_client_py/tests", "ahnlich_client_py/demo_tracing.py"
]

[tool.poetry.scripts]
bumpversion = "bumpversion:main"
change_poetry_version = "poetry-versioning:main"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
toml = "^0.10.2"
bump2version = "^1.0.1"
generic-connection-pool = "^0.7.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pytest = "^8.2.2"
pylint = "^3.2.3"
opentelemetry-api = "^1.26.0"
opentelemetry-sdk = "^1.26.0"
opentelemetry-instrumentation = "^0.47b0"
opentelemetry-exporter-otlp = "^1.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

