[tool.poetry]
name = "ahnlich-python-client"
version = "0.1.0"
description = "A python client for interacting with Ahnlich DB"
authors = ["David Onuh <davidonuh1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"

[tool.poetry.scripts]
test_serialize = "protocol:test_serialize"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
