[tool.poetry]
name = "book-search"
version = "0.1.0"
description = "A python example to search phrases in a book"
authors = ["SLKhadeeja"]
readme = "README.md"
# package-mode = false

[tool.poetry.scripts]
insertbook = "insert_book:main"
searchphrase = "search_actions:search_phrase"

[tool.poetry.dependencies]
python = "^3.11"
ahnlich_client_py = { path = "../../../sdk/ahnlich-client-py", develop = true }
ebooklib = "^0.18"
bs4 = "^0.0.2"
black = "^24.10.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
